[package]
name = "round_optimal_robust_threshold_ecdsa"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
round-based = { path = "../round-based-protocol-2/round-based", features = ["derive", "dev"] }
class_group = { path = "../class" }
curv-kzen = { version = "0.10", default-features = false }
ecdsa = "0.16.6"
tokio = { version = "1.15", features = ["rt", "macros"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
generic-array = { version = "0.14", features = ["serde"] }
thiserror = "1"
sha2 = "0.10.6"

