[package]
name = "robust_threshold_ecdsa"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
round-based = { version = "0.2", features = ["dev", "derive"] }
curv-kzen = { version = "0.10", default-features = true }
ecdsa = "0.16.6"
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
generic-array = { version = "0.14", features = ["serde"] }
thiserror = "1"
sha2 = "0.10.6"
bicycl = { path = "./bicycl"}
chrono = "0.4.33"
rayon = "1.9"
itertools = "0.12"

[profile.release]
debug = true