[package]
name = "bicycl"
version = "0.1.0"
edition = "2021"

[lib]
name = "bicycl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
cxx = "1.0"
chrono = "0.4.33"
serde = {}
#tokio = { version = "1.15", features = ["full"] }

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] }
